# app

./: .gitignore  .gitmodules  README.md  project.yml
.claude/commands/: build-macos.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
PromptConduit/: AppDelegate.swift  PromptConduitApp.swift
PromptConduit/Models/: AgentSession.swift  GridLayout.swift  MultiSessionGroup.swift  RepositoryTemplate.swift  SessionHistory.swift
PromptConduit/Resources/: Info.plist
PromptConduit/Services/: AgentManager.swift  GitService.swift  HookNotificationService.swift  ProcessDetectionService.swift  SettingsService.swift  SlashCommandsService.swift  TerminalSessionManager.swift
PromptConduitTests/: TerminalOutputMonitorTests.swift
docs/: boris.md
macOS/: CLAUDE.md  README.md  project.yml
macOS/PromptConduit/: AppDelegate.swift  PromptConduit-Bridging-Header.h  PromptConduitApp.swift
macOS/PromptConduit.xcodeproj/: project.pbxproj
macOS/PromptConduitTests/: ClaudeSessionDiscoveryTests.swift  EmbeddingServiceTests.swift  OutputParserTests.swift  PTYSessionTests.swift  PatternDetectionServiceTests.swift  PatternSkillServiceTests.swift  SlashCommandsServiceTests.swift  TerminalOutputMonitorTests.swift  (+1 more)
scripts/: setup.sh
tauri/: index.html  package-lock.json  package.json  vite.config.ts
tauri/src/: App.tsx  (+1 more)
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: lib.rs  main.rs
tauri/src-tauri/src/commands/: mod.rs  notification.rs  terminal.rs
tauri/src-tauri/src/terminal/: mod.rs
(+61 files in other folders)
