[package]
name = "promptconduit"
version = "0.1.0"
description = "Cross-platform terminal for Claude Code"
authors = ["PromptConduit"]
edition = "2021"

[lib]
name = "promptconduit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

# Cross-platform PTY
portable-pty = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies can go here

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies can go here

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies can go here

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
